# ros2_arm_ws

./: README.md
src/pick_and_place/launch/: run_all.launch.py
src/robot/launch/: gazebo.launch.py
src/robot/urdf/: gazebo.xacro  robot.ros2_control.xacro
src/robot_bringup/: CMakeLists.txt
src/robot_bringup/launch/: bringup.launch.py  moveit_gazebo.launch.py  test_trajectory.launch.py
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/config/: ros2_controllers.yaml
src/robot_control/launch/: control.launch.py  rsp.launch.py  sim_gazebo.launch.py  slider_control.py
src/robot_control/robot_control/: slider_control.py
src/robot_control/test/: test_control.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: joint_names_robot.yaml
src/robot_description/launch/: display.launch.py  gazebo.launch.py  moveit_gazebo.launch.py  random_wood_blocks.py  wood_blocks.py  wood_model.sdf
src/robot_description/meshes/: astra_cam.stl
src/robot_description/urdf/: gazebo.xacro  initial_positions.yaml  materials.xacro  robot.ros2_control.xacro  robot.urdf.xacro  robot.xacro  ros2_control.xacro  sensors.xacro
src/robot_description/worlds/: arm_on_the_table.sdf
src/robot_description_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_description_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  ros2_controllers.yaml
src/robot_description_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_gui/launch/: fake_gui_node.py
src/robot_hardware/: CMakeLists.txt  debug,txt  plugin.xml
src/robot_hardware/include/: fas_protocol.hpp  robot_hw_node.hpp  robot_system.hpp
src/robot_hardware/launch/: hardware_fake.launch.py
src/robot_hardware/src/: fas_protocol.cpp  hello_node.cpp  robot_hw_node.cpp  serial_port.cpp
src/robot_hardware/tool/: fake_data_node.py
src/robot_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
src/robot_moveit/launch/: control.launch.py  debug,txt  demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_gazebo.launch.py
src/robot_moveit/rviz/: moveit.rviz
src/robot_test/: package.xml  setup.py
src/robot_test/robot_test/: __init__.py  test_bringup.py  test_move.py
src/stm32_bridge/: package.xml  setup.py
src/stm32_bridge/stm32_bridge/: serial_utils.py  stm32_joint_sender.py
src/vision_tracking/: package.xml  setup.py
src/vision_tracking/launch/: detector_launch.py
src/vision_tracking/vision_tracking/: __init__.py  sift_yolo_tracker_node.py  yolo_publisher_node.py
tool/: final_calc_acceleration.py
tool/serial_monitor/: serial_monitor.py  serial_monitor_gui.py
